test/nginx/nginx-loadbalancer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: ConfigMap
metadata:
    name: dv-config
    namespace: default
data:
  # Configuration values can be set as key-value properties
  database: mongodb
  database_uri: mongodb://localhost:27017
  # Or set as complete file contents (even JSON!)
  keys: | 
    image.public.key=771 
    rsa.public.key=42
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dv
  namespace: dev
  labels: 
    k8s-app: nginx-dv
spec:
  replicas: 2
  selector: 
    matchLabels: 
      k8s-app: nginx-dv
  template: 
    metadata: 
      labels: 
        k8s-app: nginx-dv
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dv
  namespace: dev
  labels:
    k8s-app: nginx-dv
spec:
  ports:
  - port: 80
    name: http
  selector:
    k8s-app: nginx-dv
  type: LoadBalancer
---
